--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Demo</title>
+    <meta charset="utf-8">
+    <title>demo</title>
     <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
   </head>
   <body>
-    <div>content</div>
+    <div class="banner">
+      <div class="banner-img"></div>
+      <div class="content">
+        <small>Case Study</small>
+        <p class="title">First News</p>
+        <p>
+          Rawnet helps First News embrace digital with a literaccy tool that enables interactive learning
+        </p>
+      </div>
+
+    <div class="header">
+        <h1>Bring The First News To Life</h1>
+            <p class="description">FIRST NEWS IS THE UK'S ONLY NEWSPAPER FOR YOUNG PEOPLE AND THE WIDEST-READ CHILDREN'S PUBLICATION IN THE COUNTRY WITH A READERSHIP OF OVER 2 MILLION 7-14 YEAR OLDS EVERY WEEK AND OVER 20,000 SCHOOLS HAVING A SUBSCRIPTION TO IT.
+            </p>
+        <p>
+            As digital communications expand, First News have comrealise that they need to centralise their offeringembrace digital for children to learn in and thawhere the idea of iHub was born
+        </p>
+        <a href="http://www.firstnews.co.uk/forschools/ihub/" class="button">
+            Launch Project
+        </a>
+        <svg class="divider" width="100%" height="25px" viewBox="0 0 200 25" enable-background="new 0 0 200 25"><polygon fill="#043f8b" fill-rule="evenodd" clip-rule="evenodd" points="123,0 100,23 77,0 -390,0 -390,2 77,2 100,25 123,2 590,2 590,0 "></polygon></svg>
+    </div>
+      </div>
+    </div>
   </body>
 </html>
